# mrs_openvins_superpoint

./: .gitignore  README.md  colcon_defaults.yaml
src/mrs_open_vins_superpoint/: ReadMe.md
src/mrs_open_vins_superpoint/config/euroc_mav/: estimator_config.yaml
src/mrs_open_vins_superpoint/config/kaist/: estimator_config.yaml
src/mrs_open_vins_superpoint/config/kaist_vio/: estimator_config.yaml
src/mrs_open_vins_superpoint/config/rpng_aruco/: estimator_config.yaml
src/mrs_open_vins_superpoint/config/rpng_ironsides/: estimator_config.yaml
src/mrs_open_vins_superpoint/config/rpng_plane/: estimator_config.yaml
src/mrs_open_vins_superpoint/ov_core/: CMakeLists.txt
src/mrs_open_vins_superpoint/ov_init/: CMakeLists.txt
src/mrs_open_vins_superpoint/ov_msckf/: CMakeLists.txt  package.xml
src/mrs_open_vins_superpoint/superpoint_test_node/superpoint_test/: CMakeLists.txt  demo_superpoint.py  package.xml
src/mrs_open_vins_superpoint/superpoint_test_node/superpoint_test/src/: SuperPoint.cpp  SuperPoint.h  superpoint_detector_node.cpp
src/mrs_open_vins_superpoint/superpoint_test_node/superpoint_test/src/other/: SPextractor.cc  SuperPoint_both.cc
src/superpoint_test/: CMakeLists.txt
src/superpoint_test/config/: superpoint.yaml
src/superpoint_test/include/: SuperPointExtractor.h  SuperPointModel.h
src/superpoint_test/src/: SuperPointExtractor.cc  SuperPointModel.cpp  superpoint_detector_node.cpp
src/superpoint_test/src/other/: SPextractor.cc  SuperPoint_onlyFunction.cc  superpoint_detector_node_old.cpp
src/superpoint_test/src/unused/: SuperPoint.cpp  SuperPoint.h
src/superpoint_test_extractor/: CMakeLists.txt  package.xml
src/superpoint_test_extractor/config/: superpoint.yaml
src/superpoint_test_extractor/src/: SPextractor.cpp  SuperPoint.h  superpoint_detector_node.cpp
tmux/flightforge/: rviz.rviz  session.yml  start.sh
tmux/flightforge/config/: estimator_config.yaml  open_vins.yaml  simulator.yaml
tmux/flightforge/ov_config_flighforge/: estimator_config.yaml
tmux/handheld_lowlight/: DONT_RUN_vio_replay.bash  averager.py  camera_imu_session.yml  camera_imu_start.sh  camera_only_session.yml  camera_only_start.sh  path_distance_node.py  rviz.rviz  vio_session.yml  vio_session_record.yml  vio_session_replay_ordinary.yml  vio_session_replay_serial.yml  vio_start.sh  vio_start_record.sh  vio_start_replay.sh
tmux/handheld_lowlight/config/: estimator_config.yaml  kalibr_imu_chain.yaml  kalibr_imucam_chain.yaml
tmux/superpoint_node/: outdoor.mcap  rviz.sh  session.yml  start.sh  superpoint_test.rviz
tmux/superpoint_node/config/: superpoint.yaml
tmux/superpoint_node/open_vins/: estimator_config.yaml  kalibr_imucam_chain.yaml
tmux/superpoint_node_extractor/: config.rviz  image_republishers.yaml  play.sh  session.yml
tmux/superpoint_node_extractor/config/: superpoint.yaml
vio_dataset/: config.rviz  play.sh  republish.sh  session.yml  session_tracking.yml  tmux.sh  tmux_tracking.sh
vio_dataset/flightforge/: rviz.rviz  session.yml
vio_dataset/flightforge/config/: custom_config.yaml  network_config.yaml  simulator.yaml  static_tfs.sh
vio_dataset/flightforge/ov_config_flighforge/: estimator_config.yaml  kalibr_imu_chain.yaml  kalibr_imucam_chain.yaml
vio_dataset/open_vins/: estimator_config.yaml
vio_dataset/ov_tmux/: estimator.sh  session.yml
vio_dataset/ov_tmux/config/: kalibr_imu_chain.yaml
(+44 files in other folders)
